--- a/components/Session/UserMicBubble/styles.module.css
+++ b/components/Session/UserMicBubble/styles.module.css
@@ -7,7 +7,7 @@
   margin: auto;
   position: relative;
   z-index: 20;
-  padding-top: 20px;
+  padding-top: 20px !important;
   @screen md {
     padding-top: 0px;
   }
